--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "concurrently": "^9.1.2"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
-    "pg": "^8.13.3"
+    "vite": "^6.1.1"
   }
 }
