--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "install": "cd client && npm i && cd ../server && npm i",
     "dev": "concurrently \"cd client && npm run dev\" \"cd server && npm run dev\"",
     "start": "cd server && npm run start",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "prettier": "prettier --write 'client/src/**/*.{js,ts,tsx,jsx,json,css,scss,md}' 'server/src/**/*.{js,ts,tsx,jsx,json,css,scss,md}'"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "prettier": "^3.5.2"
   },
   "dependencies": {
     "vite": "^6.1.1"
