--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "concurrently": "^9.1.2"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "vite": "^6.1.1"
   }
 }
